applications/postgress/cluster-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-cluster-rw-lb
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pg-cluster.internal.zinkithink.com
spec:
  type: LoadBalancer
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    cnpg.io/cluster: pg-cluster
    role: primary
