applications/postgress/longhorn-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-http
  annotations:
    external-dns.alpha.kubernetes.io/hostname: longhorn.internal.zinkithink.com
spec:
  hostnames:
    - longhorn.internal.zinkithink.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
